Major fixes and improvements: - Fixed layout after recent changes by Spotify, too many changes to note; - Implemented new popup notification by Spotify; - Dynamic scrolling fix! Content can now be loaded dynamically during scrolling, this fixes long album lists, tracklists etc. as well as stuck loading button that doesn't need to be hidden anymore. Unfortunately this breaks Desktop layout positioning slightly, a matter of a single margin change. Maybe Desktop detection can be performed through a script.

--- a/SpotifyWPW/WebPlayer/Style/Components/_ArtistPage.scss
+++ b/SpotifyWPW/WebPlayer/Style/Components/_ArtistPage.scss
@@ -45,7 +45,7 @@
 		.react-contextmenu-wrapper {
 			display: block;
 			position: absolute;
-			right: 8px; // Align the button the same way it's aligned in Tracklist
+			right: 3px; // Align the button the same way it's aligned in Tracklist
 			top: 40px;
 
 			button {
@@ -67,6 +67,7 @@
 
 		&__insights {
 			margin-top: 16px;
+			padding: 0;
 
 			li {
 				margin-bottom: 8px;
