--- a/SpotifyWPW/WebPlayer/Style/Components/_DarkMode.scss
+++ b/SpotifyWPW/WebPlayer/Style/Components/_DarkMode.scss
@@ -9,6 +9,11 @@
 		background: black !important;
 	}
 
+	// Gradient background image
+	._0efd6b9f9de35e4d1fe896fe2ce5c17c\.scss {
+		display: none;
+	}
+
 	// Padded background
 	.Root__main-view .main-view-container {
 		.main-view-container__scroll-node {
