--- a/SpotifyWPW/WebPlayer/Style/Components/_SearchPage.scss
+++ b/SpotifyWPW/WebPlayer/Style/Components/_SearchPage.scss
@@ -61,8 +61,8 @@
 	nav{
 		position: relative;
 		padding: 0;
-		margin: 0;
-		margin-bottom: 16px;
+		margin-top: $statusBarHeight;
+        margin-bottom: 16px;
 		border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 
 		&:before, &:after{
