--- a/SpotifyWPW/WebPlayer/Style/Components/_TrackList.scss
+++ b/SpotifyWPW/WebPlayer/Style/Components/_TrackList.scss
@@ -93,7 +93,7 @@
 		.react-contextmenu-wrapper {
 			display: block;
 			position: absolute;
-			right: 8px;
+			right: 3px;
 			top: 40px;
 
 			button {
