--- a/SpotifyWPW/WebPlayer/Style/Components/_UserInfo.scss
+++ b/SpotifyWPW/WebPlayer/Style/Components/_UserInfo.scss
@@ -34,38 +34,22 @@
 }
 
 // Settings page
-.bvKSpB2UdAPi_Ic90nvvA {
-	padding: 12px;
-	padding-top: 56px;
+.e4f75d40c2b0bf34930d2e9499ed7e0b\.scss {
+	padding: 32px 12px 12px;
+	position: fixed; // Prevent the settings page from scrolling
 
-	// Items container
-	._3eGJHUfjUZw0Yxw6NyFcdT {
-		// Profile picture and name
-		& > div:first-child {
-			display: flex;
-			align-items: center;
+	// Profile picture and name
+	img {
+		width: 64px;
+		height: 64px;
+	}
 
-			img {
-				width: 64px;
-				height: 64px;
-				margin-right: 16px;
-			}
-
-			h1 {
-				font-size: 22px;
-			}
+		h1 {
+			font-size: 22px;
 		}
 
 		// Controls
 		.button-group {
 			align-self: center;
-			margin-top: 24px;
 		}
-
-		// Legal notices
-		._2N0xQDRqDyQyZYfLxpHOl_ {
-			margin: 0;
-			margin-top: 48px;
-		}
-	}
 }
