--- a/SpotifyWPW/WebPlayer/Style/Player.scss
+++ b/SpotifyWPW/WebPlayer/Style/Player.scss
@@ -32,8 +32,8 @@ html, body {
 }
 
 // Unsupported browser warning
-._1jYOYS8ESgPvr4iUYHHmz8 {
-	display: none;
+._7e92df01ea64ded1bddd2787ed9cdf2c\.scss {
+    display: none;
 }
 
 // Change ad layout
